# rCore-Tutorial-v3-x86_64

./: .gitignore  rustfmt.toml  targets.txt
os/: Cargo.toml  Makefile  build.rs  gdbinit
os/src/: batch.rs  config.rs  console.rs  lang_items.rs  lib.rs  link_app.S  linker.ld  loader.rs  main.rs  pic.rs  x86_64.rs
os/src/drivers/: ahci.rs  mod.rs  pci.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  sem.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs  uaccess.S  uaccess.rs
os/src/task/: manager.rs  mod.rs  proc.rs  signal.rs  switch.S  task.rs
os/src/trap/: handler.rs  mod.rs  trap.S  vector.S
user/: Cargo.toml  Makefile  x86_64.json
user/src/: lang_items.rs  lib.rs  linker.ld  syscall.rs
