[package]
name = "os"
version = "0.1.0"
authors = ["Chenhao Li <mashplants@gmail.com>"]
edition = "2021"

[dependencies]
x86_64 = "*"
bitflags = "1"
uart_16550 = "0.2"
xmas-elf = "0.8"
rboot = { path = "../rboot", default-features = false }
buddy_system_allocator = { version = "0.8", default-features = false }
